src/scss/base.scss
@use "./font.scss" as *;

@include font(400);
@include font(500);
@include font(700);

$accent-hue: 19;

:root {
    --light-bg-0: #efefef;
    --light-bg-1: #fafafa;
    --light-fg-0: #212121;
    --light-fg-1: #555;

    --dark-bg-0: #333333;
    --dark-bg-1: #4a4a4a;
    --dark-fg-0: #ededed;
    --dark-fg-1: #b6b6b6;

    --fs-40: 1rem;
    --fs-50: 1.1rem;
    --fs-60: 1.4rem;
    --fs-70: 2rem;
    --fs-80: 4rem;

    --pad: 1rem;

    // --accent-20: hsl(#{$accent-hue}, 66%, 63%);
    // --accent-30: hsl(#{$accent-hue}, 58%, 56%);
    // --accent-40: hsl(#{$accent-hue}, 50%, 50%);
    // --accent-50: hsl(#{$accent-hue}, 45%, 45%);
    // --accent-60: hsl(#{$accent-hue}, 50%, 40%);
    // --accent-70: hsl(#{$accent-hue}, 50%, 35%);
    // --accent-80: hsl(#{$accent-hue}, 50%, 30%);
}

@mixin light-theme {
    --bg-0: var(--light-bg-0);
    --bg-1: var(--light-bg-1);
    --bg-2: var(--dark-bg-1);
    --fg-0: var(--light-fg-0);
    --fg-1: var(--light-fg-1);
    --fg-2: var(--dark-fg-0);

    --fg-sel: var(--light-bg-1);
    --fg-link: var(--accent-50);

    --accent-text: hsl(19,85%,47.5%);
    --accent-fig: hsl(19,100%,50%);
    --bg-sel: hsl(19,100%,60%);
}

@mixin dark-theme {
    --bg-0: var(--dark-bg-0);
    --bg-1: var(--dark-bg-1);
    --fg-0: var(--dark-fg-0);
    --fg-1: var(--dark-fg-1);
    // --fg-sel: var(--dark-fg-0);
    --fg-link: var(--accent-20);
    
    --accent-text: hsl(19,95%,65%);
    --accent-fig: hsl(19,85%,55%);
    --bg-sel: hsl(19,95%,42%);
}

:root { @include light-theme; }
@media (prefers-color-scheme: dark) {
    :root { @include dark-theme; }
}

$width-th-1: 50rem;
$width-th-2: 70rem;

body[data-theme="light"] { @include light-theme; }
body[data-theme="dark"] { @include dark-theme; }

*, *::before, *::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Plus Jakarta Sans', sans-serif;
}

::selection {
    background-color: var(--bg-sel);
    color: var(--fg-sel);
    text-decoration-color: var(--fg-sel);
}

html {height: 100%;}
body {
    background-color: var(--bg-0);
    color: var(--fg-0);
    word-spacing: 0.1ch;
    height: 100%;
    &.has-nav-open { overflow-y: hidden; }
}

h1 {
    font-size: var(--fs-80);
    font-weight: 700;
}
h2 {
    font-size: var(--fs-70);
    font-weight: 700;
}

button {
    background: none;
    font-size: 1em;
    border: none;
    color: var(--fg-0);
    cursor: pointer;
    padding: .4rem 1rem;
}

a {
    color: var(--accent-text);
    text-decoration-color: currentColor;
}

.water-mark {
    --t: 0;
    position: fixed;
    top: 10rem;
    right: 0;
    z-index: -1;
    transform-origin: bottom right;
    transform: translateY(-100%) rotate(-90deg) translateX(calc(100% * var(--t)));
    font-size: 6rem;
    font-weight: 700;
    color: var(--fg-1);
    opacity: .07;
    width: max-content;
}

.bottom-line {
    padding-bottom: .25em;
    border-bottom: 2px solid #8883;
    margin-bottom: .45em;
}

svg.divider {
    display: block;
    width: 100%;
    height: auto;
    flex-shrink: 0;
    margin-top: auto;
}

@media (min-width: $width-th-1) {
    :root {
        --fs-40: 1rem;
        --fs-50: 1.15rem;
        --fs-60: 1.5rem;
        --fs-70: 2.5rem;
        --fs-80: 4.5rem;

        --pad: max(2rem, 8vw);
    }
    .center-lg {
        max-width: $width-th-1;
        margin-left: auto;
        margin-right: auto;
    }
    .water-mark {
        font-size: max(6rem, 15vw);
    }
}

$nav-trans: 350ms ease;

#page-nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
    display: flex;
    align-items: center;
    justify-content: end;
    padding: .8rem;
    font-size: var(--fs-50);

    overflow-x: hidden;
    overflow-y: visible;

    transition: transform 200ms ease, background-color 350ms ease;

    &.hide {
        transform: translateY(-100%);
        overflow-y: hidden;
    }

    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border-bottom: 2px solid transparent;
        transition: filter $nav-trans, border-bottom-color $nav-trans;
    }
    &.down::before {
        background-color: var(--bg-0);
        border-bottom-color: #7777;
    }

    .logo {
        z-index: 1;
        color: var(--fg-0);
        text-decoration: none;
        margin-right: auto;
        svg {
            display: block;
            height: 2.2em;
            width: auto;
        }
    }
}

#page-content {
    // overflow-x: hidden;
    background-color: var(--bg-0);
    transition: transform $nav-trans, filter $nav-trans;
    &.unfocus {
        transform: translateX(calc(-3 * var(--pad)));
        filter: brightness(.75);
    }

    height: 100%;
    display: flex;
    flex-direction: column;
}

footer {
    background-color: var(--bg-2);
    color: var(--fg-2);
    padding: var(--pad);
    padding-top: 0;
    text-align: center;
}

.theme {
    z-index: 110;
    background-color: var(--bg-1);
    border-radius: 1.5em;
    padding: .3em;
    display: flex;
    box-shadow: inset 0 0 10px var(--bg-0);

    label { cursor: pointer; }
    label + label {
        margin-left: .3em;
    }
    input { display: none; }
    svg {
        display: block;
        height: 1.5em;
        width: 1.5em;
        color: var(--fg-1);
        transition: color 200ms ease;
    }
    input:checked + svg {
        color: var(--accent-fig);
    }
    path {
        fill: currentColor;
        transform-origin: center;
    }
}

.links {
    z-index: 1;
    list-style: none;
    display: flex;

    a {
        text-decoration: none;
        text-transform: uppercase;
        color: var(--fg-0);
        font-weight: 500;
    }
    .current {
        border-bottom: 2px solid var(--accent-fig);
    }
}

.links > .multi {
    input {
        position: absolute;
        transform: scale(0);
        opacity: 0;
    }
    span {
        text-transform: uppercase;
        color: var(--fg-0);
        font-weight: 500;
    }
    label {
        position: relative;
        cursor: pointer;
    }
    ul {
        position: absolute;
        left: 50%;
        bottom: -.5rem;
        width: max-content;
        height: max-content;
        transform: translate(-50%, 100%);
        transition: clip-path .25s ease;
        clip-path: inset(0 0 100% 0);
        list-style: none;
        text-align: center;
        background-color: var(--bg-1);
        z-index: 100;
    }
    input:checked + label > ul {
        clip-path: inset(0);
    }
}

.burger {
    padding: 0;
    z-index: 110;
    margin-left: 1ch;

    svg { display: block; }
    line {
        transform-origin: center center;
        transition: opacity 250ms ease 50ms, transform 350ms ease;

        &.top { transform: translateY(-25%); }
        &.bottom { transform: translateY(25%); }
    }
}

.burger.active {
    line.middle {
        transition: opacity 250ms ease;
        opacity: 0;
    }
    line.top { transform: rotate(-45deg); }
    line.bottom { transform: rotate(45deg); }
}

@media (max-width: $width-th-1) {
    .links {
        position: fixed;
        right: 0;
        top: 0;
        height: 100%;
        z-index: 102;

        flex-direction: column;
        align-items: flex-end;
        justify-content: center;
        padding: 2rem;
        background-color: var(--bg-1);
        
        transform: translateX(100%);
        transition: transform $nav-trans;

        li + li { margin-top: 1rem; }
        a { font-size: var(--fs-60); }
    }
    .open .links { transform: translateX(0); }
}

@media (min-width: $width-th-1) {
    #page-nav { padding: 1rem; }
    .burger { display: none; }
    .links {
        flex-direction: row;
        align-items: center;

        & > li { margin-right: 2ch; }
    }
}


$large-width: 50ch;
.stop-growth { max-width: 50ch; }
hr.subtle {
    font-size: var(--fs-80);
    margin-top: .5em;
    margin-bottom: .5em;
    border-bottom: 2px solid #8883;
    border-right: none;
    border-left: none;
    border-top: none;
    height: 0;
}

